# xrpl-mcp-service

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
docs/: examples.md
src/xrpl_mcp/: __init__.py  handlers.py  server.py
