[tool.poetry]
name = "xrpl-mcp-service"
version = "0.1.0"
description = "An MCP server implementation for interacting with the XRP Ledger blockchain"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
xrpl-py = "^2.4.0"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"